Fix h stroke when nothing is typed yet (anchor-left was overriden by anchor-right)

--- a/scss/editor/headings/_h-stroke.scss
+++ b/scss/editor/headings/_h-stroke.scss
@@ -112,7 +112,10 @@ body {
                 &::before {
                     position-anchor: --header-anchor-left;
                     left: 0;
-                    right: calc(anchor(left) + var(--h#{$i}-stroke-left-anchor));
+                    right: calc(
+                        anchor(--header-anchor-left left, anchor(--header-anchor-right left)) +
+                            var(--h#{$i}-stroke-left-anchor)
+                    );
                 }
 
                 &::after {
