Replace .app-container with body > *

--- a/scss/foundations/text/_font-weight.scss
+++ b/scss/foundations/text/_font-weight.scss
@@ -1,5 +1,5 @@
 @container style(--font-text-override: '??') {
-    .app-container {
+    body > * {
         --font-weight: var(--font-light);
         --bold-modifier: 300;
     }
