--- a/scss/editor/_horizontal_rule.scss
+++ b/scss/editor/_horizontal_rule.scss
@@ -1,26 +1,40 @@
+body {
+    --hr-height: calc(1em * var(--line-height-normal));
+    --hr-thickness: 1px;
+    --hr-ornament-size: calc(1em * var(--line-height-normal));
+    --hr-ornament-right: 60px;
+    --hr-ornament-padding: 5px;
+    --hr-ornament-shadow-size: 10px;
+}
+
 .markdown-source-view:not(.minimalist, .sci-fi) hr,
 .markdown-preview-view:not(.minimalist, .sci-fi) hr:not(.footnotes hr) {
-    --hr-height: calc(1em * var(--line-height-normal));
-    --ornament-size: calc(1em * var(--line-height-normal));
-    --ornament-right: 60px;
-    --ornament-padding: 5px;
-    --hr-thickness: 1px;
     border: none;
     background-color: var(--hr-color);
     height: calc(var(--hr-height) + var(--hr-thickness));
-    
+
     -webkit-mask-image:
-        linear-gradient(to right,
+        linear-gradient(
+            to right,
             transparent,
             black 100px,
-            black calc(100% - var(--ornament-right) - var(--ornament-padding) - 10px),
-            transparent calc(100% - var(--ornament-right) - var(--ornament-padding)),
-            transparent calc(100% - var(--ornament-right) + var(--ornament-size) + var(--ornament-padding)),
-            black calc(100% - var(--ornament-right) + var(--ornament-size) + var(--ornament-padding) + 10px),
-            black),
+            black calc(100% - var(--hr-ornament-right) - var(--hr-ornament-padding) - var(--hr-ornament-shadow-size)),
+            transparent calc(100% - var(--hr-ornament-right) - var(--hr-ornament-padding)),
+            transparent calc(100% - var(--hr-ornament-right) + var(--hr-ornament-size) + var(--hr-ornament-padding)),
+            black
+                calc(
+                    100% - var(--hr-ornament-right) + var(--hr-ornament-size) + var(--hr-ornament-padding) +
+                        var(--hr-ornament-shadow-size)
+                ),
+            black
+        ),
         var(--fleuron);
-    -webkit-mask-size: 100% var(--hr-thickness), var(--ornament-size);
-    -webkit-mask-position: center, calc(100% - var(--ornament-right) + var(--ornament-size)) center;
+    -webkit-mask-size:
+        100% var(--hr-thickness),
+        var(--hr-ornament-size);
+    -webkit-mask-position:
+        center,
+        calc(100% - var(--hr-ornament-right) + var(--hr-ornament-size)) center;
     -webkit-mask-repeat: no-repeat;
 }
 
